--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "karma-source-map-support": "1.0.0",
     "load-grunt-tasks": "3.1.0",
     "semver": "4.3.3",
-    "typescript": "1.5.0-alpha"
+    "typescript": "1.5.0-beta"
   }
 }
