--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   "author": "Diego Vilar <diegovilar@gmail.com>",
   "readmeFilename": "README.TXT",
   "devDependencies": {
+    "browserify": "10.1.3",
+    "exorcist": "^0.3.0",
+    "glob": "5.0.5",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-copy": "0.8.0",
     "grunt-contrib-uglify": "0.8.0",
     "grunt-contrib-watch": "0.6.1",
     "grunt-karma": "0.10.1",
-    "grunt-rename": "^0.1.4",
+    "grunt-rename": "0.1.4",
     "grunt-run": "0.3.0",
     "grunt-text-replace": "0.4.0",
     "jasmine-core": "2.2.0",
@@ -27,6 +30,8 @@
     "karma-source-map-support": "1.0.0",
     "load-grunt-tasks": "3.1.0",
     "semver": "4.3.3",
+    "through2": "^0.6.5",
+    "tsify": "https://github.com/diegovilar/tsify.git",
     "typescript": "1.5.0-beta"
   }
 }
