--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "puts",
-  "projectName": "Puts",
+  "name": "@diegovilar/puts",
   "version": "0.0.8-snapshot",
   "description": "An error library for TypeScript applications",
   "private": true,
   "author": "Diego Vilar <diegovilar@gmail.com>",
   "readmeFilename": "README.TXT",
+  "main": "build/main.js",
+  "browser": "build-browser/puts.js",
   "devDependencies": {
     "browserify": "10.1.3",
     "exorcist": "^0.3.0",
@@ -20,6 +21,9 @@
     "grunt-run": "0.3.0",
     "grunt-text-replace": "0.4.0",
     "gulp": "^3.8.11",
+    "gulp-clean": "^0.3.1",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-util": "^3.0.4",
     "jasmine-core": "2.2.0",
     "karma": "0.12.31",
     "karma-chrome-launcher": "0.1.7",
@@ -30,10 +34,15 @@
     "karma-phantomjs-launcher": "0.1.4",
     "karma-source-map-support": "1.0.0",
     "load-grunt-tasks": "3.1.0",
+    "lodash.assign": "^3.1.0",
+    "multi-glob": "^0.4.0",
     "semver": "4.3.3",
     "through2": "^0.6.5",
     "tsify": "https://github.com/diegovilar/tsify.git",
     "typescript": "1.5.0-beta",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.2.1",
     "yargs": "^3.8.0"
   }
 }
