--- a/package.json
+++ b/package.json
@@ -8,41 +8,18 @@
   "main": "build/main.js",
   "browser": "build-browser/puts.js",
   "devDependencies": {
-    "browserify": "10.1.3",
-    "exorcist": "^0.3.0",
+    "browserify": "10.1.3",    
     "glob": "5.0.5",
-    "grunt": "0.4.5",
-    "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-copy": "0.8.0",
-    "grunt-contrib-uglify": "0.8.0",
-    "grunt-contrib-watch": "0.6.1",
-    "grunt-karma": "0.10.1",
-    "grunt-rename": "0.1.4",
-    "grunt-run": "0.3.0",
-    "grunt-text-replace": "0.4.0",
-    "gulp": "^3.8.11",
-    "gulp-clean": "^0.3.1",
-    "gulp-sourcemaps": "^1.5.2",
-    "gulp-util": "^3.0.4",
-    "jasmine-core": "2.2.0",
-    "karma": "0.12.31",
-    "karma-chrome-launcher": "0.1.7",
-    "karma-coverage": "0.2.7",
-    "karma-firefox-launcher": "0.1.4",
-    "karma-ie-launcher": "0.1.5",
-    "karma-jasmine": "0.3.5",
-    "karma-phantomjs-launcher": "0.1.4",
-    "karma-source-map-support": "1.0.0",
-    "load-grunt-tasks": "3.1.0",
-    "lodash.assign": "^3.1.0",
-    "multi-glob": "^0.4.0",
-    "semver": "4.3.3",
-    "through2": "^0.6.5",
+    "grunt": "0.4.5",    
+    "gulp": "3.8.11",
+    "gulp-clean": "0.3.1",
+    "gulp-sourcemaps": "1.5.2",
+    "gulp-util": "3.0.4",
+    "lodash.assign": "3.1.0",
     "tsify": "https://github.com/diegovilar/tsify.git",
     "typescript": "1.5.0-beta",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.1",
-    "yargs": "^3.8.0"
+    "vinyl-buffer": "1.0.0",
+    "vinyl-source-stream": "1.1.0",
+    "watchify": "3.2.1"
   }
 }
