--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   "main": "build/main.js",
   "browser": "build-browser/puts.js",
   "devDependencies": {
-    "browserify": "10.1.3",    
+    "browserify": "10.1.3",
     "glob": "5.0.5",
-    "grunt": "0.4.5",    
+    "grunt": "0.4.5",
     "gulp": "3.8.11",
     "gulp-clean": "0.3.1",
+    "gulp-copy": "0.0.2",
+    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "1.5.2",
+    "gulp-uglify": "^1.2.0",
     "gulp-util": "3.0.4",
     "lodash.assign": "3.1.0",
     "tsify": "https://github.com/diegovilar/tsify.git",
