--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@diegovilar/puts",
-  "version": "0.0.8-snapshot",
+  "version": "0.1.0",
   "description": "An error library for TypeScript applications",
   "private": true,
   "author": "Diego Vilar <diegovilar@gmail.com>",
   "readmeFilename": "README.TXT",
   "main": "build/main.js",
   "browser": "build-browser/puts.js",
+  "scripts": {
+    "install": "gulp build build-browser"
+  },
   "devDependencies": {
     "browserify": "10.1.3",
     "glob": "5.0.5",
@@ -14,9 +17,9 @@
     "gulp": "3.8.11",
     "gulp-clean": "0.3.1",
     "gulp-copy": "0.0.2",
-    "gulp-rename": "^1.2.2",
+    "gulp-rename": "1.2.2",
     "gulp-sourcemaps": "1.5.2",
-    "gulp-uglify": "^1.2.0",
+    "gulp-uglify": "1.2.0",
     "gulp-util": "3.0.4",
     "lodash.assign": "3.1.0",
     "tsify": "https://github.com/diegovilar/tsify.git",
