--- a/package.json
+++ b/package.json
@@ -8,20 +8,19 @@
   "main": "build/main.js",
   "browser": "build-browser/puts.js",
   "scripts": {
-    "postinstall": "gulp build build-browser"
+    "postinstall": "gulp build build:browser"
   },
   "dependencies": {
     "browserify": "10.1.3",
-    "glob": "5.0.5",
-    "grunt": "0.4.5",
+    "del": "1.1.1",
     "gulp": "3.8.11",
-    "gulp-clean": "0.3.1",
     "gulp-copy": "0.0.2",
     "gulp-rename": "1.2.2",
     "gulp-sourcemaps": "1.5.2",
     "gulp-uglify": "1.2.0",
     "gulp-util": "3.0.4",
     "lodash.assign": "3.1.0",
+    "mkdir-p": "0.0.6",
     "tsify": "https://github.com/diegovilar/tsify.git",
     "typescript": "1.5.0-beta",
     "vinyl-buffer": "1.0.0",
